[gd_scene load_steps=37 format=2]

[ext_resource path="res://hisami_Idle.png" type="Texture" id=1]
[ext_resource path="res://vinecell.tscn" type="PackedScene" id=2]
[ext_resource path="res://hisami.gd" type="Script" id=3]
[ext_resource path="res://fall_placehold.png" type="Texture" id=4]
[ext_resource path="res://break_shader.gshader.gdshader" type="Shader" id=5]
[ext_resource path="res://break_mask.png" type="Texture" id=6]
[ext_resource path="res://teleport_mask.png" type="Texture" id=7]
[ext_resource path="res://teleport.tres" type="Animation" id=8]
[ext_resource path="res://RESET.tres" type="Animation" id=9]
[ext_resource path="res://fallstar.png" type="Texture" id=10]
[ext_resource path="res://walking.png" type="Texture" id=11]

[sub_resource type="Shader" id=26]
code = "shader_type canvas_item;
render_mode unshaded;

uniform float cutoff :  hint_range(0.0,1.0) = 1.0;
uniform sampler2D mask: hint_albedo;
uniform vec4 flash_color : hint_color = vec4(1.0);
uniform float flash_modifier : hint_range(0.0, 1.0) = 0.0;

void fragment(){
	vec4 color =  texture(TEXTURE,UV);
	color.rgb = mix(color.rgb, flash_color.rgb, flash_modifier);
	float value = texture(mask, UV).r;
	float alpha = step(cutoff, value);
	COLOR = vec4(color.rgb, alpha*color.a);

}"

[sub_resource type="ShaderMaterial" id=27]
shader = SubResource( 26 )
shader_param/cutoff = 0.0
shader_param/flash_color = Color( 0.427451, 0.196078, 0.458824, 1 )
shader_param/flash_modifier = 0.0
shader_param/mask = ExtResource( 7 )

[sub_resource type="ShaderMaterial" id=12]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/cutoff = 1.0
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 1.0
shader_param/mask = ExtResource( 6 )

[sub_resource type="ShaderMaterial" id=13]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/cutoff = 1.0
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 1.0
shader_param/mask = ExtResource( 6 )

[sub_resource type="ShaderMaterial" id=14]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/cutoff = 1.0
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 1.0
shader_param/mask = ExtResource( 6 )

[sub_resource type="ShaderMaterial" id=15]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/cutoff = 1.0
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 1.0
shader_param/mask = ExtResource( 6 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 10 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 10 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 10 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 10 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 10 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 11 )
region = Rect2( 32, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 11 )
region = Rect2( 64, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 11 )
region = Rect2( 96, 0, 32, 48 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 10 ) ],
"loop": false,
"name": "dead",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 9 ), SubResource( 9 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), null ],
"loop": false,
"name": "fall",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 8, 12 )

[sub_resource type="Animation" id=3]
resource_name = "walk"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}

[node name="hisami" type="Node2D"]
material = SubResource( 27 )
script = ExtResource( 3 )
type = 2

[node name="pivot" type="Node2D" parent="."]
use_parent_material = true

[node name="vinecellL" parent="pivot" instance=ExtResource( 2 )]
material = SubResource( 12 )
use_parent_material = true
position = Vector2( 0, 8 )
hurtable = false
shot_through = true
can_press = false
visible_cable = false

[node name="vinecellU" parent="pivot" instance=ExtResource( 2 )]
material = SubResource( 13 )
use_parent_material = true
position = Vector2( 0, 8 )
state = 1
hurtable = false
shot_through = true
can_press = false
visible_cable = false

[node name="vinecellR" parent="pivot" instance=ExtResource( 2 )]
material = SubResource( 14 )
use_parent_material = true
position = Vector2( 0, 8 )
state = 2
hurtable = false
shot_through = true
can_press = false
visible_cable = false

[node name="vinecellD" parent="pivot" instance=ExtResource( 2 )]
material = SubResource( 15 )
use_parent_material = true
position = Vector2( 0, 8 )
state = 3
hurtable = false
shot_through = true
can_press = false
visible_cable = false

[node name="sprite" type="AnimatedSprite" parent="pivot"]
use_parent_material = true
frames = SubResource( 2 )
animation = "idle"
frame = 1
playing = true

[node name="hurtbox" type="Area2D" parent="pivot"]
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="pivot/hurtbox"]
position = Vector2( 0, 4 )
shape = SubResource( 4 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = ExtResource( 9 )
anims/teleport = ExtResource( 8 )
anims/walk = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="pivot/hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
